--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,7 +16,7 @@
             <ion-card-content>
               <img src="https://loremflickr.com/320/240?random=1" />
               <p><strong>{{ item.id }}</strong></p>
-              <p>{{ item.common_name }} {{ item.science_name }}</p>
+              <p><strong>{{ item.common_name }}</strong>, {{ item.science_name }}</p>
               <p><strong>{{ item.habitat }}</strong></p>
               <p>{{ item.country }}, {{ item.country_code }}</p>
             </ion-card-content>
